Update registry url

--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -84,7 +84,7 @@ const links = [
 let servers = [];
 let serversLoading = false;
 
-const REGISTRY_URL = 'xrmp.webmr.io';
+const REGISTRY_URL = 'http://18.209.88.19:9001';
 const RAY_COLOR = 0x44c2ff;
 const RAY_HIGHLIGHT_COLOR = new THREE.Color(RAY_COLOR).multiplyScalar(0.5).getHex();
 const rayDistance = 3;
