Bugfix reality tabs example party option rendering

--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -907,7 +907,7 @@ const _makeRig = () => {
         // Party
         ctx.fillStyle = mesh.list === 'party' ? '#42a5f5' : '#EEE';
         ctx.fillRect(menuWidth*0.8, 0, menuWidth*0.2 - 5, menuHeight);
-        ctx.fillStyle = mesh.list === 'links' ? '#FFF' : '#000';
+        ctx.fillStyle = mesh.list === 'party' ? '#FFF' : '#000';
         ctx.fillText('Party', menuWidth*0.8 + menuWidth*0.2/2 - 70, menuHeight/2 + 20);
 
         texture.needsUpdate = true;
