Update reality tabs xrmp servers request url

--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -1845,7 +1845,7 @@ function animate(time, frame) {
                   } else if (optionX === 4) {
                     menuMesh.optionsMesh.list = 'party';
                     if (!serversLoading) {
-                      XRMultiplayer.requestServers(REGISTRY_URL)
+                      XRMultiplayer.requestServers(`${REGISTRY_URL}/servers`)
                         .then(newServers => {
                           servers = newServers;
                           serversLoading = false;
