Reality tabs syntax bugfix

--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -587,7 +587,7 @@ const _openServer = (serverUrl, host) => {
       tabs.splice(index, 1);
       console.log('server object remove', id);
     } else {
-      console.warn('failed to remove local server tab', id;
+      console.warn('failed to remove local server tab', id);;
     }
   };
   xrmp.onerror = err => {
