--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -7,7 +7,7 @@
     <script src="svg-boundings.js"></script>
     <script src="sprite3d.js"></script>
     <script>
-let display, fakeDisplay, tabs = [], lastPresseds = [false, false], lastAxes = [[0.5, 0.5], [0.5, 0.5]], lastAxesValid = [false, false], scrollAxis = 0, scaleAxis = 0;
+let display, fakeDisplay, tabs = [], lastPresseds = [false, false], lastAxes = [[0.5, 0.5], [0.5, 0.5]], lastAxesValid = [false, false], scrollAxis = 0, scaleAxis = 1;
 
 const links = [
   {
@@ -1402,8 +1402,8 @@ function animate(time, frame) {
       for (let i = 0; i < gamepads.length; i++){
         const gamepad = gamepads[i];
         scrollAxis = Math.max(scrollAxis + gamepad.axes[1] / 20, 0);
-        scaleAxis = Math.max(scaleAxis + gamepad.axes[0] / 20, 0);
-        scale = new THREE.Vector3(1+scaleAxis, 1+scaleAxis, 1+scaleAxis);
+        scaleAxis = Math.max(scaleAxis + gamepad.axes[0] / 20, .15);
+        scale = new THREE.Vector3(scaleAxis, scaleAxis, scaleAxis);
 
 	localMatrix
           .fromArray(pose.targetRay.transformMatrix)
